<resources>
    <string name="app_name">ZigWheels</string>
    <string name="ZigWheels">ZigWheels</string>
    <string name="RemoveCart">Remove from WishList</string>
    <string name="wellcome">Wellcome</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="no_account_yet_create_one_hear">No Account yet? Create one hear</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="login">Login</string>
    <string name="vehicles">Vehicles</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="Welcome_guest">Welcome, guest</string>
    <string name="categories">Categories</string>
    <string name="place_order">Place order</string>
    <string name="wishlist">WishList</string>
    <string name="logged_username">logged Username</string>
    <string name="logged_useremail">logged Useremail</string>
    <string name="about">About</string>
    <string name="company">Company</string>
    <string name="price">Price</string>
    <string name="launch_year">Launch year</string>
    <string name="remove_from_wishlist">Remove from WishList</string>
    <string name="checkout">CheckOut</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome">Welcome</string>
    <string name="Username" />
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="note_remember_your_login_details">NOTE:- Remember your login details !</string>
    <string name="my_orders">My Orders</string>
    <string name="about_us">About Us</string>
    <string name="cars">Cars</string>
    <string name="ArpitName">Vekariya Arpit Jayantibhai</string>
    <string name="MeetName">Dholariya Meet Jamanbhai</string>
    <string name="enroll_186200316021">Enroll : 186200316021</string>
    <string name="enroll_186170316057">Enroll : 186170316057</string>
    <string name="todo">TODO</string>
    <string name="address">Address</string>
</resources>
