<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cc"
    android:orientation="vertical"
    tools:context=".ResetPass">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/back"
                app:tint="#ffffff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/reset_password"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo_transparent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/email"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="20sp"
                    android:hint="@string/Email"
                    android:padding="11sp"
                    android:textColor="@color/red"
                    android:textColorHighlight="#FF1111"
                    android:textColorHint="#FF0707"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/input_confirm_password"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="0dp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:drawablePadding="20sp"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="11sp"
                    android:textColor="@color/red"
                    android:textColorHighlight="#FF1111"
                    android:textColorHint="#FF0707"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/input_password"
                    tools:layout_editor_absoluteX="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/lock"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="20sp"
                    android:hint="@string/Password"
                    android:padding="11sp"
                    android:textColor="@color/red"
                    android:inputType="textPassword"
                    android:textColorHighlight="#FF1111"
                    android:textColorHint="#FF0707"
                    android:visibility="visible"
                    tools:layout_editor_absoluteX="0dp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/lock"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="20sp"
                    android:hint="@string/confirm_password"
                    android:padding="11sp"
                    android:textColor="@color/red"
                    android:inputType="textPassword"
                    android:textColorHighlight="#FF1111"
                    android:textColorHint="#FF0707"
                    android:visibility="visible"
                    tools:layout_editor_absoluteX="0dp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_Change_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    </ScrollView>
</LinearLayout>
